--- a/babylon/test2.html
+++ b/babylon/test2.html
@@ -79,21 +79,22 @@
                 new BABYLON.StandardMaterial("material2", scene),
                 new BABYLON.StandardMaterial("material3", scene)
             ];
-            materials[0].diffuseColor = new BABYLON.Color3(1, 0, 0);
-            materials[1].diffuseColor = new BABYLON.Color3(0, 1, 0);
-            materials[2].diffuseColor = new BABYLON.Color3(0, 0, 1);
+            materials[0].diffuseColor = new BABYLON.Color3(1, 0, 0); // Red
+            materials[1].diffuseColor = new BABYLON.Color3(0, 1, 0); // Green
+            materials[2].diffuseColor = new BABYLON.Color3(0, 0, 1); // Blue
 
+            // Start the spheres near the camera or the center of the village
             const positions = [
-                new BABYLON.Vector3(0, 0, 0),
-                new BABYLON.Vector3(0, 2, 0),
-                new BABYLON.Vector3(2, 0, 0)
+                new BABYLON.Vector3(1, 0, 1),  // Close to camera, in front of the village
+                new BABYLON.Vector3(2, 0, 2),  // Slightly further but still close
+                new BABYLON.Vector3(0, 0, 2)   // Another position near the center
             ];
 
             const spheres = [];
             const sphereMovements = [
-                { axis: "y", speed: 0.1, amplitude: 1, type: "oscillate" }, // Slower oscillation for red sphere
-                { axis: "x", speed: 0.03, type: "rotate" },
-                { axis: "z", speed: 0.0005, radius: 1, type: "spiral" } // Adjusted spiral for blue sphere
+                { axis: "y", speed: 0.1, amplitude: 0.5, type: "oscillate" }, // Oscillate in y direction within a small range
+                { axis: "x", speed: 0.05, type: "rotate" }, // Slow rotation along x axis
+                { axis: "z", speed: 0.002, radius: 1, type: "spiral" } // Slow spiral motion, staying close to the center
             ];
 
             for (let i = 0; i < 3; i++) {
@@ -110,6 +111,7 @@
                     const movement = sphereMovements[index];
                     if (movement.type === "oscillate") {
                         const axis = movement.axis;
+                        // Restrict oscillation within a smaller range
                         sphere.position[axis] = positions[index][axis] + Math.sin(time * movement.speed) * movement.amplitude;
                     } else if (movement.type === "rotate") {
                         sphere.rotation[movement.axis] += movement.speed;
@@ -117,7 +119,7 @@
                         const angle = time * movement.speed;
                         sphere.position.x = positions[index].x + Math.cos(angle) * movement.radius;
                         sphere.position.z = positions[index].z + Math.sin(angle) * movement.radius;
-                        sphere.position.y = positions[index].y + Math.sin(angle) * 0.5; // Add vertical movement for return
+                        sphere.position.y = positions[index].y + Math.sin(angle) * 0.25; // Small vertical movement
                     }
                 });
             });
