--- a/babylon/test2.html
+++ b/babylon/test2.html
@@ -97,6 +97,8 @@
                 { axis: "z", speed: 0.01, radius: 0.05, type: "spiral" } // Green sphere with spiral motion (no change)
             ];
 
+            const sphereNames = ["Red", "Green", "Blue"];
+
             for (let i = 0; i < 3; i++) {
                 const sphere = BABYLON.MeshBuilder.CreateSphere("sphere" + i, sphereProperties, scene);
                 sphere.position = positions[i];
@@ -105,7 +107,7 @@
 
                 // Create floating text labels
                 const dynamicTexture = new BABYLON.DynamicTexture("DynamicTexture", { width: 512, height: 256 }, scene);
-                dynamicTexture.drawText(materials[i].diffuseColor.toHexString(), null, 140, "bold 140px Arial", "white", "transparent", true);
+                dynamicTexture.drawText(sphereNames[i], null, 140, "bold 140px Arial", "white", "transparent", true);
                 const plane = BABYLON.MeshBuilder.CreatePlane("textPlane" + i, { width: 2, height: 1 }, scene);
                 plane.position = new BABYLON.Vector3(positions[i].x, positions[i].y + 2.5, positions[i].z);
                 plane.material = new BABYLON.StandardMaterial("textPlaneMaterial" + i, scene);
